Azure Dev/azvuppu.tf
provider "azurerm" {

    version = "~>2.0"
    features {}
    
    subscription_id = "xxxx Azure Portal subscription xxxx"
    client_id       = "xxxx Azure Portal ID Sub xxxx"
    client_secret   = "xxxx Azure Portal Secret Key login xxxx"
    tenant_id       = "xxxx unique identifier ID xxxx"
}

## Creating Resource Group:

resource "azurerm_resource_group" "myterraformgroup" {
    name     = "myResourceGroup"
    location = "eastus"

    tags = {
        environment = "Terraform Demo"
    }
}
Variable Declaration : ${azurerm_resource_group.myterraformgroup.name}

## Creating Virtual Network:

resource "azurerm_virtual_network" "myterraformnetwork" {
    name                = "myVnet"
    address_space       = ["10.0.0.0/16"]
    location            = "eastus"
    resource_group_name =azurerm_resource_group.myterraformgroup.name

    tags = {
        environment = "Terraform Demo"
    }
}
	Creating Subnet's
	resource "azurerm_subnet" "myterraformsubnet" {
    	name               = "mySubnet"
    	resource_group_name=azurerm_resource_group.myterraformgroup.name
	virtual_network_name =azurerm_virtual_network.myterraformnetwork.name
    	address_prefix       = "10.0.2.0/24"
	}


## Creating public IP address

resource "azurerm_public_ip" "myterraformpublicip" {
    name                         = "myPublicIP"
    location                     = "eastus"
    resource_group_name     = azurerm_resource_group.myterraformgroup.name
    allocation_method            = "Dynamic"
    tags = {
        environment = "Terraform Demo"
    }
}
## Creating Network Security Group

resource "azurerm_network_security_group" "myterraformnsg" {
    name                = "myNetworkSecurityGroup"
    location            = "eastus"
    resource_group_name = azurerm_resource_group.myterraformgroup.name
    
    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }

    tags = {
        environment = "Terraform Demo"
    }
}

## Creating Virtual Network interface card

resource "azurerm_network_interface" "myterraformnic" {
    name                    = "myNIC"
    location                = "eastus"
    resource_group_name     = azurerm_resource_group.myterraformgroup.name

    ip_configuration {
        name                  = "myNicConfiguration"
        subnet_id             = "${azurerm_subnet.myterraformsubnet.id}"
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id ="${azurerm_public_ip.myterraformpublicip.id}"
    }

    tags = {
        environment = "Terraform Demo"
    }
}

### Connect the security group to the network interface

resource "azurerm_network_interface_security_group_association" "example" {
    network_interface_id      = azurerm_network_interface.myterraformnic.id
network_security_group_id = azurerm_network_security_group.myterraformnsg.id
}

## Create storage account for diagnostics

resource "random_id" "randomId" {
    keepers = {
        
	### Generate a new ID only when a new resource group is defined

        resource_group = azurerm_resource_group.myterraformgroup.name
    }
    
    byte_length = 8
}

resource "azurerm_storage_account" "mystorageaccount" {
    name                    = "diag${random_id.randomId.hex}"
    resource_group_name     = azurerm_resource_group.myterraformgroup.name
    location                    = "eastus"
    account_replication_type    = "LRS"
    account_tier                = "Standard"

    tags = {
        environment = "Terraform Demo"
    }
}

## Create virtual machine

resource "azurerm_linux_virtual_machine" "myterraformvm" {
    name                  = "myVM"
    location              = "eastus"
    resource_group_name   = azurerm_resource_group.myterraformgroup.name
    network_interface_ids = [azurerm_network_interface.myterraformnic.id]
    size                  = "Standard_DS1_v2"

    os_disk {
        name              = "myOsDisk"
        caching           = "ReadWrite"
        storage_account_type = "Premium_LRS"
    }

    source_image_reference {
        publisher = "Canonical"
        offer     = "UbuntuServer"
        sku       = "16.04.0-LTS"
        version   = "latest"
    }

    computer_name  = "myvm"
    admin_username = "azureuser"
    disable_password_authentication = true
        
    admin_ssh_key {
        username       = "azureuser"
        public_key     = file("/home/azureuser/.ssh/authorized_keys")
    }

    boot_diagnostics {
    storage_account_uri = azurerm_storage_account.mystorageaccount.primary_blob_endpoint
    }

    tags = {
        environment = "Terraform Demo"
    }
}
